fixed show video checkbox going invisible

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ html, body {
   color: white;
 }
 
+input {
+  
+}
+
 canvas {
   display: block;
 }
